# iron-shapes-booleanop

./: .woodpecker.yml  Cargo.toml  README.md
src/: booleanop.rs  compare_segments.rs  connect_edges.rs  connectivity_extraction.rs  init_events.rs  intersection.rs  lib.rs  naive_scanline.rs  possible_intersection.rs  sweep_event.rs
src/boolean/: compare_segments.rs  intersection.rs  mod.rs  possible_intersection.rs  sweep_event.rs
src/sweep_line/: btree_scanline.rs  compare_segments.rs  intersection.rs  mod.rs  naive_scanline.rs  possible_intersection.rs  splay_scanline.rs  sweep_event.rs
tests/: booleanop.rs  connectivity_extraction.rs  tests.rs
