[package]
name = "iron-shapes-booleanop"
version = "0.0.1"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2018"
license = "AGPLv3"
description = "Boolean operations on polygons for iron-shapes."

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.2"
itertools = "0.10"
iron-shapes = {path = "../iron-shapes"}
libreda-splay = {path = "../splay"}

[dev-dependencies]
rand = "0.8" # For randomized tests.
