[package]
name = "iron-shapes-booleanop"
version = "0.0.3"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Boolean operations on polygons for iron-shapes."

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
itertools = "0.10"
iron-shapes = {version = "0.0.7", path = "../iron-shapes"}
libreda-splay = {version = "0.1", path = "../splay"}

[dev-dependencies]
rand = "0.8" # For randomized tests.
