# SPDX-FileCopyrightText: 2022 Thomas Kramer
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "iron-shapes-booleanop"
version = "0.0.3"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Boolean operations on polygons for iron-shapes."

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
itertools = "0.10"
iron-shapes = {version = "0.0.8", git = "https://github.com/pbonh/iron-shapes.git"}
libreda-splay = {version = "0.1", git = "https://github.com/pbonh/splay.git"}

[dev-dependencies]
rand = "0.8" # For randomized tests.
